# synth

./: .clang-format  .gitmodules  .lgtm.yml  CMakeLists.txt  LICENSE  README.md  sonar-project.properties
.github/workflows/: ci.yaml  codeql-analysis.yml  sonarcloud.yaml
cordic_sine/: CMakeLists.txt  main.cpp
gentable/: CMakeLists.txt  main.cpp
scsynth/: CMakeLists.txt  main.cpp  scnco.hpp  scwavetable.hpp
synth/: CMakeLists.txt  envelope.hpp  fixed.hpp  main.cpp  nco.hpp  uint.hpp  voice.hpp  wav_file.hpp  wavetable.hpp
synth/include/synth/: envelope.hpp  fixed.hpp  lerp.hpp  nco.hpp  uint.hpp  voice.hpp  voice_assigner.hpp  wavetable.hpp
synth/lib/: CMakeLists.txt  envelope.cpp  voice.cpp  voice_assigner.cpp  wavetable.cpp
synth/tools/: CMakeLists.txt
synth/tools/player_macos/: AppDelegate.h  AppDelegate.mm  CMakeLists.txt  MIDIChangeHandler.h  MIDIChangeHandler.mm  MacOSXBundleInfo.plist.in  ScopeView.h  ScopeView.m  ViewController.h  ViewController.m  ViewController.mm  audio_queue.h  audio_queue.mm  error.h  error.mm  player_macos.m  player_macos.mm
synth/tools/player_macos/Base.lproj/: Main.storyboard
synth/tools/player_macos/iOS/: SceneDelegate.h  SceneDelegate.m
synth/tools/player_macos/iOS/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
synth/tools/player_macos/macOS/Base.lproj/: Main.storyboard
synth/tools/wav_writer/: CMakeLists.txt  main.cpp  poly_blep_sawtooth.hpp  wav_file.hpp
unittests/: CMakeLists.txt
unittests/synth/: CMakeLists.txt  test_fixed.cpp  test_oscillator.cpp  test_wavetable.cpp
